        than max_mail_). So only 5 (POP3) or 4 (APOP) POP commands needed for
        a update when no new messages are available (POP3)
   - Bugfix: Respect use_max_mail_ (POP3)
   - Start of checking for new mail now protocol independent in class Mailbox
   - Bugfix: Number of mails to be displayed distributed correctly among the
        mailboxes
   - Bugfix: Displaying popup data correctly
   - Some additional include files added for FreeBSD
   - Macro TEMP_FAILURE_RETURN provided for systems that don't have it
   - Bugfix: Once mail is displayed set mailbox status to MAILBOX_OLD
   - Bugfix: Note only those mails for displaying that will be displayed
        (local mailboxes)
   - Feature: Gnubiff applet and/or popup may appear in pagers or not
   - Bugfix: Remove mail ids from hidden_ that are no longer in seen_
   - Simplified code for loading config file
   - Error messages for errors when loading config file

Version 2.1.0
 * Nicolas Rougier
   - New & simpler interface
   - Support of the IDLE state for imap4 (no more polling)
   - Support of the FAM (File Alteration Monitor)
     (no more polling for file/folder protocols)
   - Better detection of mailbox format
   - Bugfix: IMAP4 idle state test to avoid checking twice
   - Bugfix: Popup was shown on exiting preferences
   - Put back credits
   - Updated French translations
   - Fix a bug with IMAP4 idle feature (not recognizing the BYE command)
   - Added a TODO file to keep track of features/bugs to be implemented/fixed
   - Bugfix: Testing of "\"text\" \"plain\"" in imap4 parsing was wrong
             (some servers answer using upper cases letter)
   - Modified credits apperance in the preferences panel (and remove the
     about menu from gnome applet popup menu)
   - Bugfix: socket was closed twice when lock was lost in IDLE state
   - Bugfix: modify the configure script to have errors if popt or fam
             libraries not present
   - Sorted the contributors list